# auto_selenium

./: pyproject.toml
auto_selenium/: __init__.py  proxy_config.yaml
auto_selenium/browser/: base.py  mixins.py  settings.py
tests/: test_auto_selenium.py
